styles/viewDrinks/viewDrinks.css
.containerViewsDrinks {
    background-image: var(--bg_Drinks);
    background-size: cover;
    background-repeat: no-repeat;

    min-height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
}

.drinksTitle {
    color: white;
    text-shadow: var(--borderTitle);
    font-size: 4rem;
    margin-bottom: 5vh;

    text-align: center;
}

.containerButtons {
    width: 100vW;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;

    background-image: var(--branches_Drinks);
    background-repeat: no-repeat;
    background-position: center;
}

.tipsDrinks {
    display: flex;
    justify-content: flex-start;
    margin-right: 9vw;
    margin-bottom: 8vh;
}

.tipsDrinksRight {
    display: flex;
    justify-content: flex-end;
    
    margin-bottom: 8vh;
}

.buttonsRight {
    padding-top: 6vh;;
}

.tipsDrinks1 {
    background-image: url("/assets/bebidas/b-cervezas.svg");
    background-size: 150%;
    background-repeat: no-repeat;
    background-position: 16vw;

    display: flex;
    justify-content: center;
    
    padding-right: 0vw;
    padding-left: 5vw;

    padding-bottom: 11.5vh;

}

.tipsDrinks2 {
    background-image: url("/assets/bebidas/b-cocktailsClasicos.svg");
    background-size: 140%;
    background-repeat: no-repeat;
    background-position:right ;

    display: flex;
    justify-content: flex-start;
    
    padding-top: 1vh;
    padding-right: 0vw;
    padding-left: 0vw;
    padding-bottom: 12.5vh;

}

.tipsDrinks3 {/* por media query quitar el backgound image para el responsive del Iphone SE */
    /* background-image: url("/assets/bebidas/b-cocktailsClasicos.svg");
    background-size: 100%;
    background-repeat: no-repeat;
    background-position-x: -8vw; */

    display: flex;
    justify-content: center;
    
    padding-right: 0vw;
    padding-left: 5vw;

    padding-bottom: 8.5vh;

}

.buttonTipsDrinks {
    height: 9vh;
    width: 19vh;
   
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5% 50%;
    margin-bottom: 25px;

    background-color: #5B7E3D;

    border-radius: 10px;
    border: 3px solid var(--color1);

    z-index: 400;

}


.logoViewDrinks {
    height: 21vh;
    margin-bottom: 4vh;

    z-index: 400;
}

.cervezas {
    color: white;
    text-shadow: var(--border);
    font-size: 1.8rem;
    font-weight: var(--fontSize);
    text-decoration: none;
    padding: 5% 5%;
}

.cocktailsClasicos {
    color: white;
    text-shadow: var(--border);
    font-size: 1.4rem;
    font-weight: var(--fontSize);
    text-decoration: none;
    padding: 5% 5%;
}

.cocktailsTheJungle {
    color: white;
    text-shadow: var(--border);
    font-size: 1.4rem;
    font-weight: var(--fontSize);
    text-decoration: none;
    padding: 5% 5%;
}

.combinados {
    color: white;
    text-shadow: var(--border);
    font-size: 1.2rem;
    font-weight: var(--fontSize);
    text-decoration: none;
    padding: 5% 5%;
}

.chupitos {
    color: white;
    text-shadow: var(--border);
    font-size: 1.8rem;
    font-weight: var(--fontSize);
    text-decoration: none;
    padding: 5% 5%;
}

